Se realiza reactorizacion debido a cambios de logica del negocio